<resources>
    <string name="app_name">Swarm Control</string>
    <string name="about">About</string>
    <string-array name="changelog">
        <item>- Brookstone AC13 Rover added (Remote Control and Video Playback)</item>
        <item></item>
        <item>- Swarm Control made social (Like, Share and Comment as much as you want)</item>
        <item>Update (0.3.1): Authentication not required for Like and Share</item>
	</string-array>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="quit">Quit</string>
    <string name="intro">Swarm Control is developed at Distributed Organisms, DO bots. It
        is meant to showcase remote control of many different robots, and in due time,
        group functionality.</string>
    <string name="swarmcontrol_behaviours">Select one of the following swarm actions to start</string>
    <string name="swarmcontrol_robots">Select a robot to display its sensors and to control it remotely</string>
    <string name="placeholder">This will show data coming from the robot (like images or
        compass needle).</string>
    <string name="about_general">  
        Swarm Control is developed at Distributed Organisms or DO bots. DO researches,
        develops, and maintains robotic swarms. DO is a daughter company of the Dutch 
        research company Almende B.V. 
        
        This Android app will be appended over the course of time to showcase remote
        control of a wide variety of commercial-off-the-shelf robots. Moreover, it will
        demonstrate group functionality in due time.
          
        Please, realize that most of our swarm solutions use more dedicated robots. See 
        for example http://www.fireswarm.nl for one of our projects, where UAVs are used
        to find fire for the fire brigade.
    </string>
    <string name="about_license_gpl">
        Swarm Control is released under GPLv3 license, http://gplv3.fsf.org/
    </string>
    <string name="about_ok">OK</string>
    <string name="choose_robot">Choose a robot</string>
    <string name="choose_swarm_action">Choose a swarm action</string>
    <string name="robotdevice_title">This is the robot name</string>
    <string name="robotdevice_sensorselection">Choose one of the following sensors to display its data</string>
    <string name="robotdevice_motorselection">Choose one of the following motors to display its data</string>
    <string name="robotdevice_lbl_notimplemented">Access for this robot is not yet implemented</string>
    <string name="change_log">Change Log:</string>
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">Select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for new devices</string>
    <string name="pairing_message">After pairing, press menu and connect.</string>
    <string name="wait_till_bt_on">Turning Bluetooth on (to connect to your robot)</string>
    <string name="bt_off_message">Bluetooth turned off. See you later!</string>
    <string name="connecting_please_wait">Connecting to your robot.\nPlease wait...</string>
    <string name="no_paired_nxt">No paired NXT robot found!</string>
    <string name="problem_at_connecting">Problem in creating a connection!</string>
    <string name="problem_at_closing">Problem in closing the connection!</string>
    <string name="problem_at_sending">Problem in sending a message!</string>
    <string name="problem_at_receiving">Problem in receiving a message!</string>
    <string name="current_position">Current position: </string>
    <string name="bt_error_dialog_title">Bluetooth Error</string>
    <string name="bt_error_dialog_message">
        Oh, no! It seems that your robot is not switched on. Please make sure that
        your robot is on, has BlueTooth activated and then try again to connect.
    </string>
    <string name="bt_needs_to_be_enabled">You need to enable BT first!"</string>
    <string name="stop">Stop</string>
    <string name="ok">OK</string>
    <string name="control_fwd">Fwd</string>
    <string name="control_left">Left</string>
    <string name="control_bwd">Bwd</string>
    <string name="control_right">Right</string>
    <string name="control">Remote Control</string>
    <string name="roomba_title">Roomba</string>
    <string name="roomba_chargingstate">Charging State:</string>
    <string name="roomba_charge">Charge:</string>
    <string name="roomba_temperature">Temperature:</string>
    <string name="roomba_power">Power:</string>
    <string-array name="roomba_sensor_pkgs">
        <item >Environment Sensors</item>
        <item >Controls, Buttons, Actuators</item>
        <item >Power Settings</item>
    </string-array>
    <string name="roomba_choose_sensor_pkg">Choose a sensor package</string>
    <string name="roomba_choose_sensor">Choose a sensor</string>
    <string name="roomba_lbl_wheeldrop">Wheeldrop</string>
    <string name="roomba_lbl_BumpLeft">Bump Left</string>
    <string name="roomba_lbl_bumpright">Bump Right</string>
    <string name="roomba_lbl_casterwd">Caster</string>
    <string name="roomba_lbl_leftwd">Left</string>
    <string name="roomba_lbl_rightwd">Right</string>
    <string name="roomba_lbl_Wall">Wall</string>
    <string name="roomba_lbl_cliffleft">Left</string>
    <string name="roomba_lbl_clifffrontleft">Front Left</string>
    <string name="roomba_lbl_clifffrontright">Front Right</string>
    <string name="roomba_lbl_cliffright">Right</string>
    <string name="roomba_lbl_wall">Wall</string>
    <string name="roomba_lbl_virtualwall">Virtual Wall</string>
    <string name="roomba_lbl_dirtleft">Dirt Left</string>
    <string name="roomba_lbl_dirtright">Dirt Right</string>
    <string name="roomba_lbl_motorovercurrents">Motor Overcurrents:</string>
    <string name="roomba_lbl_driveleft">Drive Left</string>
    <string name="roomba_lbl_driveright">Drive Right</string>
    <string name="roomba_lbl_mainbrush">Main Brush</string>
    <string name="roomba_lbl_vacuum">Vacuum</string>
    <string name="roomba_lbl_sidebrush">Side Brush</string>
    <string name="roomba_lbl_cliffsensors">Cliff Sensors:</string>
    <string name="roomba_commands">Roomba Commands</string>
    <string name="roomba_lbl_remoteopcode">Remote OpCode:</string>
    <string name="roomba_lbl_buttons">Buttons pressed:</string>
    <string name="roomba_lbl_Power">Power</string>
    <string name="roomba_lbl_spot">Spot</string>
    <string name="roomba_lbl_Clean">Clean</string>
    <string name="roomba_lbl_max">Max</string>
    <string name="roomba_lbl_distance">Distance:</string>
    <string name="roomba_lbl_angle">Angle:</string>
    <string name="roomba_btn_off">Off</string>
    <string name="roomba_btn_dock">Dock</string>
    <string name="roomba_btn_clean">Clean</string>
    <string name="roomba_brushcontrol">Control the Brushes</string>
    <string name="roomba_btn_mainbrush">Main Brush</string>
    <string name="roomba_btn_sidebrush">Side Brush</string>
    <string name="roomba_btn_vacuum">Vacuum</string>
    <string name="roomba_btn_power">Power</string>
    <string name="nxt_title">Mindstorm NXT</string>
    <string name="nxt_commands">NXT Commands</string>
    <string name="nxt_lbl_colour">Colour:</string>
    <string name="nxt_lbl_distance">Distance:</string>
    <string name="nxt_lbl_Sound">Sound:</string>
    <string name="nxt_lbl_pushbutton">Push Button Pressed:</string>
    <string name="nxt_lbl_sonic">Sonic:</string>
    <string name="nxt_sensor_1_cb">Sensor 1</string>
    <string name="nxt_value">Value:</string>
    <string name="nxt_sensor_2_cb">Sensor 2</string>
    <string name="nxt_sensor_3_cb">Sensor 3</string>
    <string name="nxt_sensor_4_cb">Sensor 4</string>
    <string name="nxt_rawvalue">Raw Value:</string>
    <string name="nxt_normvalue">Normalized Value:</string>
    <string name="nxt_scalevalue">Scaled Value:</string>
    <string name="nxt_calibvalue">Calibrated Value:</string>
    <string name="nxt_motor_1_cb">Motor 1</string>
    <string name="nxt_motor_2_cb">Motor 2</string>
    <string name="nxt_motor_3_cb">Motor 3</string>
    <string name="nxt_reset">Reset</string>
    <string name="nxt_powersetpoint">Power Setpoint:</string>
    <string name="nxt_tachocount">Tacho Count:</string>
    <string name="nxt_rotationcount">Rotation Count:</string>
    <string name="dancing_Description">Here we show a way to connect to a set of multiple robots which can be chosen from the available robots. Once the robots are paired together, they can be simultaneously controlled. This can be done by manual control or by choosing a set of dancing patterns and letting the robots execute them.</string>
    <string name="dancing_Add">Add Robot...</string>
    <string name="dancing_Control">Enable Remote Control</string>
    <string name="dancing_Title">Dancing</string>
    <string name="dancing_Remove">Remove Robots...</string>
    <string-array name="dancing_dance_moves">
        <item>Forward</item>
        <item>Backward</item>
        <item>Rotate Left</item>
        <item>Rotate Right</item>
        <item>Delay</item>
    </string-array>
    <string name="dancing_RemoveSteps">Remove Steps...</string>
    <string name="dancing_ClearSteps">Clear</string>
    <string name="dancing_StartDance">Start</string>
    <string name="dancing_dancelist">Dance List:</string>
    <string name="dancing_stopdance">Stop</string>
    <string name="robo40_title">Robo40</string>
    <string name="robo40_commands">Robo40 Commands</string>
    <string name="robo40_motoraccess">Set value for motor</string>
    <string name="Robo40_Sensor1Value">Sensor 1</string>
    <string name="Robo40_Sensor2Value">Sensor 2</string>
    <string name="Robo40_Sensor3Value">Sensor 3</string>
    <string name="Robo40_Sensor4Value">Sensor 4</string>
    <string name="robo40_motor1">Motor 1</string>
    <string name="robo40_motor2">Motor 2</string>
    <string name="robo40_motor3">Motor 3</string>
    <string name="dotty_title">Dotty</string>
    <string name="dotty_commands">Dotty Commands</string>
    <string name="dotty_sensorselection">Choose which sensors you want to display</string>
    <string name="dotty_dist">Distance</string>
    <string name="dotty_light">Light</string>
    <string name="dotty_value">Value</string>
    <string name="dotty_sound">Sound</string>
    <string name="dotty_battery">Battery</string>
    <string name="dotty_interval">Interval:</string>
    <string name="dotty_streaming">Streaming: OFF</string>
    <string name="ardrone_battery">Battery</string>
    <string name="ardrone_altitude">Altitude</string>
    <string name="ardrone_pitch">Pitch</string>
    <string name="ardrone_roll">Roll</string>
    <string name="ardrone_yaw">Yaw</string>
    <string name="ardrone_ctrlstate">Control State</string>
    <string name="ardrone_sensors">Sensors</string>
    <string name="ardrone_camera">Camera:</string>
    <string name="ardrone_title">AR Drone</string>
    <string name="ardrone_commands">AR Drone Commands</string>
    <string name="parrot_vx">Vx</string>
    <string name="parrot_vy">Vy</string>
    <string name="parrot_vz">Vz</string>
    <string name="roboscooper_title">RoboScooper</string>
    <string name="roboscooper_commands">RoboScooper Commands</string>
    <string name="roboscooper_dump">Dump</string>
    <string name="roboscooper_pickup">Pick-up</string>
    <string name="roboscooper_talk">Talk</string>
    <string name="roboscooper_vision">Vision</string>
    <string name="roboscooper_whack">Whack</string>
    <string name="roboscooper_cleansweep">Clean Sweep</string>
    <string name="roboscooper_playmodes">Play Modes</string>
</resources>