<?xml version="1.0" encoding="utf-8"?>
<org.dobots.utility.LockableScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="fill" >

	<LinearLayout
	    xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:gravity="fill"
	    android:orientation="vertical" >

		<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content" >
		
		    <TextView
		        android:id="@+id/lblRobot"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/roboscooper_title"
		        android:textAppearance="?android:attr/textAppearanceLarge" />

			<View
			    android:layout_width="0dp"
			    android:layout_weight="1"
			    android:layout_height="wrap_content" />

			<CheckBox
			    android:id="@+id/btnComments"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:button="@drawable/comment" />

		</LinearLayout>
	
	    <TextView
	        android:id="@+id/lblCommands"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/roboscooper_commands" />

	    <LinearLayout
	        android:id="@+id/layRemote"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="bottom|fill" >

	        <ToggleButton
	            android:id="@+id/btnRemoteControl"
	            android:layout_width="wrap_content"
	            android:layout_height="match_parent"
	            android:layout_gravity="center"
	            android:paddingLeft="10dp"
	            android:paddingRight="10dp"
	            android:text="@string/control"
	            android:textOff="@string/control"
	            android:textOn="@string/control" />
	        
	    </LinearLayout>

	    <LinearLayout
	        android:id="@+id/layControls"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="bottom|fill"
	        android:visibility="gone" >

	        <Button
	            android:id="@+id/btnStop"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/stop" />

	        <Button
	            android:id="@+id/btnVision"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/roboscooper_vision" />

	        <Button
	            android:id="@+id/btnPickUp"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/roboscooper_pickup" />

	        <Button
	            android:id="@+id/btnDump"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/roboscooper_dump" />

	    </LinearLayout>

	    <LinearLayout
	        android:id="@+id/layPlayModes"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:visibility="gone" >

		    <TextView
		        android:id="@+id/lblPlayModes"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/roboscooper_playmodes" />
	        
	        <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:gravity="bottom|fill" >

	            <Button
	                android:id="@+id/btnWhackMode"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/roboscooper_whack" />

	            <Button
	                android:id="@+id/btnTalkMode"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/roboscooper_talk" />

	            <Button
	                android:id="@+id/btnCleanSweepMode"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/roboscooper_cleansweep" />

	            <Button
	                android:id="@+id/btnPickUpMode"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/roboscooper_pickup" />
	        </LinearLayout>

	    </LinearLayout>

	    <View
	        android:layout_width="wrap_content"
	        android:layout_height="20dp" />

	    <include
	        android:id="@+id/laySensors"
	        layout="@layout/brainlink_sensors" />

	    <View
	        android:layout_width="wrap_content"
	        android:layout_height="20dp" />

	    <include
	        android:id="@+id/layRemoteControl"
	        layout="@layout/remote_control" />
	    
	</LinearLayout>
	
</org.dobots.utility.LockableScrollView>