<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/nxt"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:gravity="fill" >
	
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical" >
	
	    <TextView
	        android:id="@+id/lblRobot"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/ardrone_title"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
	
	    <TextView
	        android:id="@+id/lblCommands"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/ardrone_commands" />
	
	    <LinearLayout
	        android:id="@+id/layControls"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >
	
	        <Button
	            android:id="@+id/btnRemoteControl"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/roomba_lbl_control" />

	        <Button
	            android:id="@+id/btnCamera"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/ardrone_camera" />

	    </LinearLayout>
	
	    <View
	        android:layout_width="wrap_content"
	        android:layout_height="20dp" />
	    
	    <ImageView
	        android:id="@+id/ivARDrone_Video"
	        android:layout_width="249dp"
	        android:layout_height="206dp"
	        android:layout_gravity="center"
	        android:layout_x="37dp"
	        android:layout_y="46dp"
	        android:src="@drawable/ic_action_search" />
	
	    <include
	        android:id="@+id/layRemoteControl"
	        layout="@layout/ardrone_remotectrl"
	        android:visibility="gone" />
	
	    <View
	        android:layout_width="wrap_content"
	        android:layout_height="20dp" />
	    
	    <LinearLayout
	        android:id="@+id/LinearLayout01"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >

	        <Button
	            android:id="@+id/btnSensors"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/ardrone_sensors" />
	    </LinearLayout>
	    
	    <include 
	        android:id="@+id/laySensors"
	        android:visibility="gone"
	        layout="@layout/ardrone_sensors" />
	   
	</LinearLayout>
</ScrollView>